# Facerecognition

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  apertureLayer.cpp  apertureLayer.hpp  basicInfoLayer.hpp  basicInfoLayer.ui  detectionResultLayer.cpp  detectionResultLayer.hpp  detectionResultLayer.ui  mainWidget.cpp  mainWidget.hpp  resource.qrc
include/: WltRS.h  readerdll.h
src/: CMakeLists.txt  Facerecognition_zh_CN.ts  apertureLayer.cpp  apertureLayer.hpp  apertureLayer.ui  basicInfoLayer.cpp  basicInfoLayer.hpp  detectionResultLayer.cpp  detectionResultLayer.hpp  detectionResultLayer.ui  main.cpp  mainWidget.cpp  mainWidget.hpp  mainWidget.ui  resource.qrc
